Name:           language-c
Version:        0.2.5
Cabal-Version:  >= 1.2
Build-Type:     Simple
License:        BSD3
License-File:   LICENSE
Copyright:      LICENSE
Author:         AUTHORS
Maintainer:     -
Stability:      -
Homepage:       -
Synopsis:       C99 Parser Library
Category:       Development

Extra-Source-Files: src/Language/C/Parser/Lexer.x
                    src/Language/C/Parser/Parser.y
Flag splitBase
    Description: Choose the new smaller, split-up base package.
Flag useByteStrings
    Description: Use ByteString as InputStream datatype
    Default: True
Library
    Extensions: CPP, DeriveDataTypeable
    Build-Depends:  filepath, mtl

    if flag(splitBase)
        Build-Depends: base >= 3, process, directory, array, containers, pretty
    else
        Build-Depends: base < 3
        
    if flag(useByteStrings)
        Build-Depends: bytestring >= 0.9.0
    else
        cpp-options: -DNO_BYTESTRING
    Build-Tools:    happy, alex

    Hs-Source-Dirs: src
    Exposed-Modules:  
                      Language.C.Common.Constants
                      Language.C.Common.Name 
                      Language.C.Common.Position 
                      Language.C.Common.Error 
                      Language.C.Common.Node 
                      Language.C.Common.Ops
                      Language.C.Common.Ident 
                      Language.C.Common
                      Language.C.Analysis.NameSpaceMap
                      Language.C.Analysis.SymbolTable
                      Language.C.Analysis.TravMonad
                      Language.C.Analysis.SemRep              
                      -- Language.C.Analysis.AstAnalysis
                      -- Language.C.Analysis.TypeAnalysis
                      Language.C.Parser.AST
                      Language.C.Parser.Builtin
                      Language.C.Parser.InputStream
                      Language.C.Parser.Lexer 
                      Language.C.Parser.Parser 
                      Language.C.Parser.ParserMonad 
                      Language.C.Parser.Pretty
                      Language.C.Parser.Tokens 
                      Language.C              
    Other-Modules:    
                      Language.C.Common.RList