Name:           language-c
Version:        0.2.6
Cabal-Version:  >= 1.2
Build-Type:     Simple
License:        BSD3
License-File:   LICENSE
Copyright:      LICENSE
Author:         AUTHORS
Maintainer:     -
Stability:      -
Homepage:       -
Synopsis:       C99 Parser Library
Category:       Development

Extra-Source-Files: src/Language/C/Parser/Lexer.x
                    src/Language/C/Parser/Parser.y
Flag splitBase
    Description: Choose the new smaller, split-up base package.
Flag useByteStrings
    Description: Use ByteString as InputStream datatype
    Default: True
Library
    Extensions: CPP, DeriveDataTypeable
    Build-Depends:  filepath, mtl

    if flag(splitBase)
        Build-Depends: base >= 3, process, directory, array, containers, pretty
    else
        Build-Depends: base < 3
        
    if flag(useByteStrings)
        Build-Depends: bytestring >= 0.9.0
    else
        cpp-options: -DNO_BYTESTRING
    Build-Tools:    happy, alex

    Hs-Source-Dirs: src
    Exposed-Modules:  
                      -- provisional
                      Language.C
                      Language.C.Syntax
                      Language.C.InputStream
                      Language.C.Parser
                      Language.C.Pretty
                      Language.C.System.Preprocess
                      Language.C.System.Gcc                      
                      -- experimental
                      Language.C.Analysis
                      -- implementation
                      Language.C.Syntax.AST
                      Language.C.Syntax.Constants
                      Language.C.Syntax.Name 
                      Language.C.Syntax.Position 
                      Language.C.Syntax.Node 
                      Language.C.Syntax.Ops
                      Language.C.Syntax.Ident 
                      Language.C.Analysis.Error
                      Language.C.Analysis.NameSpaceMap
                      Language.C.Analysis.DefTable
                      Language.C.Analysis.TravMonad
                      Language.C.Analysis.SemRep              
                      -- Language.C.Analysis.AstAnalysis
                      -- Language.C.Analysis.DeclAnalysis
                      Language.C.Parser.Builtin
                      Language.C.Parser.Lexer 
                      Language.C.Parser.Parser 
                      Language.C.Parser.ParserMonad 
                      Language.C.Parser.Tokens 
    Other-Modules:    
                      Language.C.Syntax.RList