Name:           language-c
Version:        0.2.8
Cabal-Version:  >= 1.2
Build-Type:     Simple
License:        BSD3
License-File:   LICENSE
Copyright:      LICENSE
Author:         AUTHORS
Maintainer:     -
Stability:      -
Homepage:       -
Synopsis:       C99 Parser Library
Category:       Development

Extra-Source-Files: src/Language/C/Parser/Lexer.x
                    src/Language/C/Parser/Parser.y
Flag splitBase
    Description: Choose the new smaller, split-up base package.
Flag useByteStrings
    Description: Use ByteString as InputStream datatype
    Default: True
Library
    Extensions: CPP, DeriveDataTypeable
    Build-Depends:  filepath, mtl

    if flag(splitBase)
        Build-Depends: base >= 3, process, directory, array, containers, pretty
    else
        Build-Depends: base < 3
        
    if flag(useByteStrings)
        Build-Depends: bytestring >= 0.9.0
    else
        cpp-options: -DNO_BYTESTRING
    Build-Tools:    happy, alex

    Hs-Source-Dirs: src
    Exposed-Modules:  
                      -- provisional
                      Language.C
                      -- data
                      Language.C.Data
                      Language.C.Data.Position
                      Language.C.Data.Ident
                      Language.C.Data.Error
                      Language.C.Data.Name
                      Language.C.Data.Node
                      Language.C.InputStream
                      -- syntax
                      Language.C.Syntax
                      Language.C.Syntax.AST
                      Language.C.Syntax.Constants
                      Language.C.Syntax.Ops
                      -- parser
                      Language.C.Parser
                      -- pretty printer
                      Language.C.Pretty
                      -- system
                      Language.C.System.Preprocess
                      Language.C.System.GCC
                      -- analysis [experimental]
                      Language.C.Analysis
                      Language.C.Analysis.SemError
                      Language.C.Analysis.SemRep              
                      Language.C.Analysis.DefTable
                      Language.C.Analysis.TravMonad
                      Language.C.Analysis.AstAnalysis
                      Language.C.Analysis.DeclAnalysis
                      Language.C.Analysis.Debug
                      -- semrep -> code [alpha]
                      Language.C.Analysis.Export
    Other-Modules:    
                      -- implementation
                      Language.C.Data.RList
                      Language.C.Analysis.NameSpaceMap
                      Language.C.Parser.Builtin
                      Language.C.Parser.Lexer 
                      Language.C.Parser.ParserMonad 
                      Language.C.Parser.Tokens 
                      Language.C.Parser.Parser 
                      